# The-Adult-Content-Alpha

./: .gitignore  README.md  docker-compose.yml  structure.md
go-analytics/: go.mod  go.sum
go-analytics/cmd/server/: main.go
go-analytics/internal/api_routes/: routes.go
go-analytics/internal/dmca_generator/: generator.go
go-analytics/internal/kafka_consumers/: consumer.go
go-analytics/internal/phash_matcher/: matcher.go
go-analytics/internal/trend_engine/: engine.go
next-agency-ui/: package-lock.json  package.json
next-agency-ui/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
next-agency-ui/.next/cache/: .tsbuildinfo  config.json
next-agency-ui/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
next-agency-ui/.next/server/app/: _not-found.rsc  creators.html  creators.rsc  index.html  index.rsc  leaks.html  leaks.rsc  page.js  page_client-reference-manifest.js  radar.html  radar.rsc
next-agency-ui/app/: layout.tsx  page.tsx
next-agency-ui/app/creators/: page.tsx
next-agency-ui/app/leaks/: page.tsx
next-agency-ui/app/radar/: page.tsx
next-agency-ui/components/charts/: HeatLineChart.tsx  RadarChart.tsx
rust-ingestion/: Cargo.toml
rust-ingestion/src/: kafka_sender.rs  lib.rs  main.rs  rate_limiter.rs
rust-ingestion/src/scrapers/: mod.rs  reddit.rs  x_api.rs
rust-ingestion/src/vision/: mod.rs  phash.rs
(+27 files in other folders)
